fix: Remove overflow hidden in book summary

--- a/css/styles.css
+++ b/css/styles.css
@@ -246,7 +246,6 @@
   font-size: var(--font-size-text-normal);
   line-height: 1.5;
 
-  overflow: hidden;
   text-overflow: clip;
 }
 
